# unoq-braccio

./: README.md
app_lab/braccio_remote_agent/: README.md  app.yaml
app_lab/braccio_remote_agent/python/: main.py
app_lab/braccio_remote_agent/sketch/: sketch.ino  sketch.yaml
app_lab/braccio_smoke_test/: README.md  app.yaml
app_lab/braccio_smoke_test/python/: main.py
app_lab/braccio_smoke_test/sketch/: sketch.ino  sketch.yaml
app_lab/braccio_web_agent/: README.md
app_lab/braccio_web_agent/python/: main.py
docs/: hardware.md  platform-setup.md  vision.md
edge_impulse/: README.md  data_capture.md  linux_eim_runner.py  linux_setup.md  pick_place_workflows.yaml  runner_template.py
ros2_ws/src/unoq_braccio_bringup/launch/: edge_impulse_ros_pick_place.launch.py  remote.launch.py  vision_usb.launch.py
ros2_ws/src/unoq_braccio_driver/: package.xml  setup.py
ros2_ws/src/unoq_braccio_driver/unoq_braccio_driver/: color_tracker.py  detection_label_bridge.py  edge_impulse_capture.py  joint_state_simulator.py  joint_trajectory_bridge.py  tcp_bridge.py  usb_camera_node.py
ros2_ws/src/unoq_braccio_sim/: README.md  package.xml
ros2_ws/src/unoq_braccio_sim/config/: controllers.yaml
ros2_ws/src/unoq_braccio_sim/launch/: gazebo.launch.py
ros2_ws/src/unoq_braccio_sim/urdf/: braccio.urdf.xacro
ros2_ws/src/unoq_braccio_sim/worlds/: empty.world
scripts/: check_sim_control.sh  check_sim_meshes.sh  flash_unoq.ps1  flash_unoq.sh  package_app_lab.ps1  setup_edge_impulse_linux.sh
web_app/: README.md
web_app/static/: app.js  index.html  styles.css
