<?xml version="1.0"?>
<package format="3">
  <name>unoq_braccio_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 hardware drivers and command helpers for UNO Q Braccio.</description>
  <maintainer email="eoin@example.com">Eoin Jordan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>vision_msgs</depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
